optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_props_optimization.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useTask$ } from '@qwik.dev/core';
import { CONST } from 'const';
export const Works = component$(({
	count,
	some = 1+2,
	hello = CONST,
	stuff: hey,
	stuffDefault: hey2 = 123,
	...rest}) => {
	console.log(hey, some);
	useTask$(({track}) => {
		track(() => count);
		console.log(count, rest, hey, some, hey2);
	});
	return (
		<div some={some} params={{ some }} class={count} {...rest} override>{count}</div>
	);
});

export const NoWorks2 = component$(({count, stuff: {hey}}) => {
	console.log(hey);
	useTask$(({track}) => {
		track(() => count);
		console.log(count);
	});
	return (
		<div class={count}>{count}</div>
	);
});

export const NoWorks3 = component$(({count, stuff = hola()}) => {
	console.log(stuff);
	useTask$(({track}) => {
		track(() => count);
		console.log(count);
	});
	return (
		<div class={count}>{count}</div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_HhMVyM8M9So = ()=>import("./test.tsx_test.tsx_Works_component_useTask_HhMVyM8M9So");
const i_xJyUXaLUiKw = ()=>import("./test.tsx_test.tsx_Works_component_xJyUXaLUiKw");
const i_Sh1z1NhQPjY = ()=>import("./test.tsx_test.tsx_NoWorks2_component_useTask_Sh1z1NhQPjY");
const i_Jhs0YVs504k = ()=>import("./test.tsx_test.tsx_NoWorks2_component_Jhs0YVs504k");
const i_RvMwK3Z5au0 = ()=>import("./test.tsx_test.tsx_NoWorks3_component_useTask_RvMwK3Z5au0");
const i_NzET9vTvU1E = ()=>import("./test.tsx_test.tsx_NoWorks3_component_NzET9vTvU1E");
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_xJyUXaLUiKw, "test.tsx_Works_component_xJyUXaLUiKw"));
export const NoWorks2 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_Jhs0YVs504k, "test.tsx_NoWorks2_component_Jhs0YVs504k"));
export const NoWorks3 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_NzET9vTvU1E, "test.tsx_NoWorks3_component_NzET9vTvU1E"));


None
============================= test.tsx_test.tsx_Works_component_useTask_HhMVyM8M9So.js (ENTRY POINT)==

export const test.tsx_Works_component_useTask_HhMVyM8M9So = ({ track })=>{
	track(()=>count);
	console.log(count, rest, hey, some, hey2);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Works_component_useTask_HhMVyM8M9So",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component_useTask",
  "hash": "HhMVyM8M9So",
  "canonicalFilename": "test.tsx_test.tsx_Works_component_useTask_HhMVyM8M9So",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    252,
    336
  ]
}
*/
============================= test.tsx_test.tsx_NoWorks2_component_useTask_Sh1z1NhQPjY.js (ENTRY POINT)==

export const test.tsx_NoWorks2_component_useTask_Sh1z1NhQPjY = ({ track })=>{
	track(()=>count);
	console.log(count);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_NoWorks2_component_useTask_Sh1z1NhQPjY",
  "entry": "entry_segments",
  "displayName": "test.tsx_NoWorks2_component_useTask",
  "hash": "Sh1z1NhQPjY",
  "canonicalFilename": "test.tsx_test.tsx_NoWorks2_component_useTask_Sh1z1NhQPjY",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    535,
    596
  ]
}
*/
============================= test.tsx_test.tsx_NoWorks3_component_NzET9vTvU1E.js (ENTRY POINT)==

import { _jsxSorted, qrl, useTaskQrl } from "@qwik.dev/core";
const i_RvMwK3Z5au0 = ()=>import("./test.tsx_test.tsx_NoWorks3_component_useTask_RvMwK3Z5au0");
export const test.tsx_NoWorks3_component_NzET9vTvU1E = ({ count, stuff = hola() })=>{
	console.log(stuff);
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_RvMwK3Z5au0, "test.tsx_NoWorks3_component_useTask_RvMwK3Z5au0"));
	return /*#__PURE__*/ _jsxSorted("div", { class: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_RvMwK3Z5au0, "test.tsx_NoWorks3_component_useTask_RvMwK3Z5au0")) }, null, _wrapProp(_rawProps, "count"), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_NoWorks3_component_NzET9vTvU1E",
  "entry": "entry_segments",
  "displayName": "test.tsx_NoWorks3_component",
  "hash": "NzET9vTvU1E",
  "canonicalFilename": "test.tsx_test.tsx_NoWorks3_component_NzET9vTvU1E",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    688,
    864
  ]
}
*/
============================= test.tsx_test.tsx_NoWorks2_component_Jhs0YVs504k.js (ENTRY POINT)==

import { _jsxSorted, qrl, useTaskQrl } from "@qwik.dev/core";
const i_Sh1z1NhQPjY = ()=>import("./test.tsx_test.tsx_NoWorks2_component_useTask_Sh1z1NhQPjY");
export const test.tsx_NoWorks2_component_Jhs0YVs504k = ({ count, stuff: { hey } })=>{
	console.log(hey);
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_Sh1z1NhQPjY, "test.tsx_NoWorks2_component_useTask_Sh1z1NhQPjY"));
	return /*#__PURE__*/ _jsxSorted("div", { class: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_Sh1z1NhQPjY, "test.tsx_NoWorks2_component_useTask_Sh1z1NhQPjY")) }, null, _wrapProp(_rawProps, "count"), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_NoWorks2_component_Jhs0YVs504k",
  "entry": "entry_segments",
  "displayName": "test.tsx_NoWorks2_component",
  "hash": "Jhs0YVs504k",
  "canonicalFilename": "test.tsx_test.tsx_NoWorks2_component_Jhs0YVs504k",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    477,
    649
  ]
}
*/
============================= test.tsx_test.tsx_Works_component_xJyUXaLUiKw.js (ENTRY POINT)==

import { _getConstProps, _getVarProps, _jsxSplit, qrl, useTaskQrl } from "@qwik.dev/core";
import { CONST } from "const";
const i_HhMVyM8M9So = ()=>import("./test.tsx_test.tsx_Works_component_useTask_HhMVyM8M9So");
export const test.tsx_Works_component_xJyUXaLUiKw = ({ count, some = 1 + 2, hello = CONST, stuff: hey, stuffDefault: hey2 = 123, ...rest })=>{
	console.log(hey, some);
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_HhMVyM8M9So, "test.tsx_Works_component_useTask_HhMVyM8M9So"));
	return /*#__PURE__*/ _jsxSplit("div", {
		some: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_HhMVyM8M9So, "test.tsx_Works_component_useTask_HhMVyM8M9So")),
		params: { some },
		class: _wrapProp(_rawProps, "count"),
		..._getVarProps(rest),
		override: true
	}, _getConstProps(rest), _wrapProp(_rawProps, "count"), 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Works_component_xJyUXaLUiKw",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component",
  "hash": "xJyUXaLUiKw",
  "canonicalFilename": "test.tsx_test.tsx_Works_component_xJyUXaLUiKw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    121,
    438
  ]
}
*/
============================= test.tsx_test.tsx_NoWorks3_component_useTask_RvMwK3Z5au0.js (ENTRY POINT)==

export const test.tsx_NoWorks3_component_useTask_RvMwK3Z5au0 = ({ track })=>{
	track(()=>count);
	console.log(count);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_NoWorks3_component_useTask_RvMwK3Z5au0",
  "entry": "entry_segments",
  "displayName": "test.tsx_NoWorks3_component_useTask",
  "hash": "RvMwK3Z5au0",
  "canonicalFilename": "test.tsx_test.tsx_NoWorks3_component_useTask_RvMwK3Z5au0",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    750,
    811
  ]
}
*/
== DIAGNOSTICS ==

[]
