optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_props_wrapping2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from '@qwik.dev/core';
export const Works = component$((props: { fromProps: number }) => {
	let fromLocal = useSignal(0);
	return (
		<div
			computed={fromLocal + props.fromProps}
			local={fromLocal}
			props-wrap={props.fromProps}
			props-only={{props: props.fromProps}}
			props={{props: props.fromProps, local: fromLocal}}
				>
		</div>
	);
});

============================= test.js ==

import { _jsxSorted, componentQrl, inlinedQrl, useSignal } from "@qwik.dev/core";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	let fromLocal = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", {
		computed: fromLocal + props.fromProps,
		local: fromLocal,
		props-wrap: props.fromProps,
		props-only: { props: props.fromProps },
		props: {
			props: props.fromProps,
			local: fromLocal
		}
	}, null, null, 3, null);
}, "Works_component_t45qL4vNGv0"));


None
== DIAGNOSTICS ==

[]
