optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_props_wrapping_children.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from '@qwik.dev/core';
export const Works = component$(({fromProps}) => {
	let fromLocal = useSignal(0);
	return (
		<div>
			{fromLocal}
			{fromProps}
			{fromLocal + fromProps}
			{{props: fromProps}}
			{{local: fromLocal}}
			{{props: fromProps, local: fromLocal}}
		</div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_xJyUXaLUiKw = ()=>import("./test.tsx_test.tsx_Works_component_xJyUXaLUiKw");
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_xJyUXaLUiKw, "test.tsx_Works_component_xJyUXaLUiKw"));


None
============================= test.tsx_test.tsx_Works_component_xJyUXaLUiKw.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
export const test.tsx_Works_component_xJyUXaLUiKw = ({ fromProps })=>{
	let fromLocal = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		fromLocal,
		_wrapProp(_rawProps, "fromProps"),
		fromLocal + fromProps,
		{ props: fromProps },
		{ local: fromLocal },
		{
			props: fromProps,
			local: fromLocal
		}
	], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Works_component_xJyUXaLUiKw",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component",
  "hash": "xJyUXaLUiKw",
  "canonicalFilename": "test.tsx_test.tsx_Works_component_xJyUXaLUiKw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    320
  ]
}
*/
== DIAGNOSTICS ==

[]
