optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_qwik_conflict.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStyles } from '@qwik.dev/core';
import { qrl } from '@qwik.dev/core/what';

export const hW = 12;
export const handleWatch = 42;

const componentQrl = () => console.log('not this', qrl());

componentQrl();
export const Foo = component$(() => {
	useStyles$('thing');
	const qwik = hW + handleWatch;
	console.log(qwik);
	const qrl = 23;
	return (
		<div onClick$={()=> console.log(qrl)}/>
	)
}, {
	tagName: "my-foo",
});

export const Root = component$(() => {
	useStyles($('thing'));
	return $(() => {
		return (
			<div/>
		)
	});
}, {
	tagName: "my-foo",
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core/what";
const i_JG9QnIkplMk = ()=>import("./test.tsx_Foo_component_useStyles_JG9QnIkplMk");
const i_gZqPatVoDqw = ()=>import("./test.tsx_Foo_component_gZqPatVoDqw");
const i_RefWVhWbrwk = ()=>import("./test.tsx_Root_component_useStyles_RefWVhWbrwk");
const i_cX5WLpIzsoU = ()=>import("./test.tsx_Root_component_1_cX5WLpIzsoU");
const i_YvjM3SoLvrM = ()=>import("./test.tsx_Root_component_YvjM3SoLvrM");
export const hW = 12;
export const handleWatch = 42;
const componentQrl = ()=>console.log("not this", qrl());
componentQrl();
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"));
export const Root = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_YvjM3SoLvrM, "Root_component_YvjM3SoLvrM"));


None
============================= test.tsx_Root_component_useStyles_RefWVhWbrwk.js (ENTRY POINT)==

export const Root_component_useStyles_RefWVhWbrwk = "thing";


None
/*
{
  "origin": "test.tsx",
  "name": "Root_component_useStyles_RefWVhWbrwk",
  "entry": null,
  "displayName": "test.tsx_Root_component_useStyles",
  "hash": "RefWVhWbrwk",
  "canonicalFilename": "test.tsx_Root_component_useStyles_RefWVhWbrwk",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    499,
    506
  ]
}
*/
============================= test.tsx_Root_component_1_cX5WLpIzsoU.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const Root_component_1_cX5WLpIzsoU = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Root_component_1_cX5WLpIzsoU",
  "entry": null,
  "displayName": "test.tsx_Root_component_1",
  "hash": "cX5WLpIzsoU",
  "canonicalFilename": "test.tsx_Root_component_1_cX5WLpIzsoU",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    520,
    555
  ]
}
*/
============================= test.tsx_Foo_component_gZqPatVoDqw.js (ENTRY POINT)==

import { _jsxSorted, useStylesQrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
const i_JG9QnIkplMk = ()=>import("./test.tsx_Foo_component_useStyles_JG9QnIkplMk");
export const Foo_component_gZqPatVoDqw = ()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_JG9QnIkplMk, "Foo_component_useStyles_JG9QnIkplMk"));
	const qwik = /*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_JG9QnIkplMk, "Foo_component_useStyles_JG9QnIkplMk"));
	console.log(qwik);
	const qrl = 23;
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ qrl(i_onClick, "Foo_component_div_onClick", [qrl]) }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_gZqPatVoDqw",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "gZqPatVoDqw",
  "canonicalFilename": "test.tsx_Foo_component_gZqPatVoDqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    263,
    418
  ]
}
*/
============================= test.tsx_Root_component_YvjM3SoLvrM.js (ENTRY POINT)==

import { qrl, useStyles } from "@qwik.dev/core";
const i_RefWVhWbrwk = ()=>import("./test.tsx_Root_component_useStyles_RefWVhWbrwk");
export const Root_component_YvjM3SoLvrM = ()=>{
	useStyles(/*#__PURE__*/ qrl(i_RefWVhWbrwk, "Root_component_useStyles_RefWVhWbrwk"));
	return /*#__PURE__*/ qrl(i_cX5WLpIzsoU, "Root_component_1_cX5WLpIzsoU");
};


None
/*
{
  "origin": "test.tsx",
  "name": "Root_component_YvjM3SoLvrM",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "YvjM3SoLvrM",
  "canonicalFilename": "test.tsx_Root_component_YvjM3SoLvrM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    478,
    559
  ]
}
*/
============================= test.tsx_Foo_component_useStyles_JG9QnIkplMk.js (ENTRY POINT)==

export const Foo_component_useStyles_JG9QnIkplMk = "thing";


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_useStyles_JG9QnIkplMk",
  "entry": null,
  "displayName": "test.tsx_Foo_component_useStyles",
  "hash": "JG9QnIkplMk",
  "canonicalFilename": "test.tsx_Foo_component_useStyles_JG9QnIkplMk",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    283,
    290
  ]
}
*/
== DIAGNOSTICS ==

[]
