optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_reg_ctx_name_segments.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, server$ } from '@qwik.dev/core';
import { foo } from './foo';
export const Works = component$((props) => {
	const text = 'hola';
	return (
		<>
		<div onClick$={server$(() => console.log('in server', text))}></div>
		<div onClick$={() => foo()}></div>
		</>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_OsNoEFc5SM4 = ()=>import("./test.tsx_Works_component_div_onClick_server_OsNoEFc5SM4");
const i_t45qL4vNGv0 = ()=>import("./test.tsx_Works_component_t45qL4vNGv0");
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_t45qL4vNGv0, "Works_component_t45qL4vNGv0"));


None
============================= test.tsx_Works_component_div_onClick_server_OsNoEFc5SM4.js (ENTRY POINT)==

export const Works_component_div_onClick_server_OsNoEFc5SM4 = ()=>{
	const [text] = useLexicalScope();
	return console.log("in server", text);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Works_component_div_onClick_server_OsNoEFc5SM4",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component_div_onClick_server",
  "hash": "OsNoEFc5SM4",
  "canonicalFilename": "test.tsx_Works_component_div_onClick_server_OsNoEFc5SM4",
  "path": "",
  "extension": "js",
  "parent": "onClick",
  "ctxKind": "function",
  "ctxName": "server$",
  "captures": true,
  "loc": [
    193,
    229
  ]
}
*/
============================= test.tsx_Works_component_t45qL4vNGv0.js (ENTRY POINT)==

import { _jsxSorted, qrl, serverQrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const i_1 = ()=>import("./test.tsx");
const i_OsNoEFc5SM4 = ()=>import("./test.tsx_Works_component_div_onClick_server_OsNoEFc5SM4");
export const Works_component_t45qL4vNGv0 = (props)=>{
	const text = "hola";
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ serverQrl(/*#__PURE__*/ qrl(i_OsNoEFc5SM4, "Works_component_div_onClick_server_OsNoEFc5SM4", [text])) }, null, null, 3, null), /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_1, "Works_component_div_onClick_1") }, null, null, 3, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Works_component_t45qL4vNGv0",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component",
  "hash": "t45qL4vNGv0",
  "canonicalFilename": "test.tsx_Works_component_t45qL4vNGv0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    118,
    287
  ]
}
*/
== DIAGNOSTICS ==

[]
