optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_reg_ctx_name_segments_hoisted.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, server$, useStyle$ } from '@qwik.dev/core';

export const Works = component$((props) => {
	useStyle$(STYLES);
	const text = 'hola';
	return (
		<div onClick$={server$(() => console.log('in server', text))}></div>
	);
});

const STYLES = '.class {}';

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_PMhaPO6UZzY = ()=>import("./test.tsx_Works_component_useStyle_PMhaPO6UZzY");
const i_p1CZ8B6duOg = ()=>import("./test.tsx_Works_component_div_onClick_server_p1CZ8B6duOg");
const i_xJyUXaLUiKw = ()=>import("./test.tsx_Works_component_xJyUXaLUiKw");
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_xJyUXaLUiKw, "Works_component_xJyUXaLUiKw"));
const STYLES = ".class {}";


None
============================= test.tsx_Works_component_useStyle_PMhaPO6UZzY.js (ENTRY POINT)==

export const Works_component_useStyle_PMhaPO6UZzY = STYLES;


None
/*
{
  "origin": "test.tsx",
  "name": "Works_component_useStyle_PMhaPO6UZzY",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component_useStyle",
  "hash": "PMhaPO6UZzY",
  "canonicalFilename": "test.tsx_Works_component_useStyle_PMhaPO6UZzY",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyle$",
  "captures": false,
  "loc": [
    125,
    131
  ]
}
*/
============================= test.tsx_Works_component_xJyUXaLUiKw.js (ENTRY POINT)==

import { _jsxSorted, qrl, serverQrl, useStyleQrl } from "@qwik.dev/core";
const i_p1CZ8B6duOg = ()=>import("./test.tsx_Works_component_div_onClick_server_p1CZ8B6duOg");
const i_PMhaPO6UZzY = ()=>import("./test.tsx_Works_component_useStyle_PMhaPO6UZzY");
export const Works_component_xJyUXaLUiKw = (props)=>{
	/*#__PURE__*/ useStyleQrl(/*#__PURE__*/ qrl(i_PMhaPO6UZzY, "Works_component_useStyle_PMhaPO6UZzY"));
	const text = /*#__PURE__*/ useStyleQrl(/*#__PURE__*/ qrl(i_PMhaPO6UZzY, "Works_component_useStyle_PMhaPO6UZzY"));
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ serverQrl(/*#__PURE__*/ qrl(i_p1CZ8B6duOg, "Works_component_div_onClick_server_p1CZ8B6duOg", [text])) }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Works_component_xJyUXaLUiKw",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component",
  "hash": "xJyUXaLUiKw",
  "canonicalFilename": "test.tsx_Works_component_xJyUXaLUiKw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    101,
    242
  ]
}
*/
============================= test.tsx_Works_component_div_onClick_server_p1CZ8B6duOg.js (ENTRY POINT)==

export const Works_component_div_onClick_server_p1CZ8B6duOg = ()=>{
	const [text] = useLexicalScope();
	return console.log("in server", text);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Works_component_div_onClick_server_p1CZ8B6duOg",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component_div_onClick_server",
  "hash": "p1CZ8B6duOg",
  "canonicalFilename": "test.tsx_Works_component_div_onClick_server_p1CZ8B6duOg",
  "path": "",
  "extension": "js",
  "parent": "onClick",
  "ctxKind": "function",
  "ctxName": "server$",
  "captures": true,
  "loc": [
    191,
    227
  ]
}
*/
== DIAGNOSTICS ==

[]
