optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_reg_ctx_name_segments_inlined.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, server$ } from '@qwik.dev/core';
export const Works = component$((props) => {
	const text = 'hola';
	return (
		<div onClick$={server$(() => console.log('in server', text))}></div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_p1CZ8B6duOg = ()=>import("./test.tsx_Works_component_div_onClick_server_p1CZ8B6duOg");
const i_xJyUXaLUiKw = ()=>import("./test.tsx_Works_component_xJyUXaLUiKw");
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_xJyUXaLUiKw, "Works_component_xJyUXaLUiKw"));


None
============================= test.tsx_Works_component_xJyUXaLUiKw.js (ENTRY POINT)==

import { _jsxSorted, qrl, serverQrl } from "@qwik.dev/core";
const i_p1CZ8B6duOg = ()=>import("./test.tsx_Works_component_div_onClick_server_p1CZ8B6duOg");
export const Works_component_xJyUXaLUiKw = (props)=>{
	const text = "hola";
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ serverQrl(/*#__PURE__*/ qrl(i_p1CZ8B6duOg, "Works_component_div_onClick_server_p1CZ8B6duOg", [text])) }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Works_component_xJyUXaLUiKw",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component",
  "hash": "xJyUXaLUiKw",
  "canonicalFilename": "test.tsx_Works_component_xJyUXaLUiKw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    89,
    210
  ]
}
*/
============================= test.tsx_Works_component_div_onClick_server_p1CZ8B6duOg.js (ENTRY POINT)==

export const Works_component_div_onClick_server_p1CZ8B6duOg = ()=>{
	const [text] = useLexicalScope();
	return console.log("in server", text);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Works_component_div_onClick_server_p1CZ8B6duOg",
  "entry": "entry_segments",
  "displayName": "test.tsx_Works_component_div_onClick_server",
  "hash": "p1CZ8B6duOg",
  "canonicalFilename": "test.tsx_Works_component_div_onClick_server_p1CZ8B6duOg",
  "path": "",
  "extension": "js",
  "parent": "onClick",
  "ctxKind": "function",
  "ctxName": "server$",
  "captures": true,
  "loc": [
    159,
    195
  ]
}
*/
== DIAGNOSTICS ==

[]
