optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_server_auth.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import GitHub from '@auth/core/providers/github'
import Facebook from 'next-auth/providers/facebook'
import Google from 'next-auth/providers/google'
import {serverAuth$, auth$} from '@auth/qwik';

export const { onRequest, logout, getSession, signup } = serverAuth$({
	providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: import.meta.env.FACEBOOK_ID,
		clientSecret: import.meta.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
	]
});

export const { onRequest, logout, getSession, signup } = auth$({
	providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: process.env.FACEBOOK_ID,
		clientSecret: process.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
	]
});

============================= test.js ==

import { authQrl, serverAuthQrl } from "@auth/qwik";
import { authQrl, qrl, serverAuthQrl } from "@qwik.dev/core";
const i_vPbyaRdcMu4 = ()=>import("./test.tsx_serverAuth_vPbyaRdcMu4");
const i_US9XKovuOyI = ()=>import("./test.tsx_auth_US9XKovuOyI");
export const { onRequest, logout, getSession, signup } = /*#__PURE__*/ serverAuthQrl(/*#__PURE__*/ qrl(i_vPbyaRdcMu4, "serverAuth_vPbyaRdcMu4"));
export const { onRequest, logout, getSession, signup } = /*#__PURE__*/ authQrl(/*#__PURE__*/ qrl(i_US9XKovuOyI, "auth_US9XKovuOyI"));


None
============================= test.tsx_auth_US9XKovuOyI.js (ENTRY POINT)==

import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
export const auth_US9XKovuOyI = { providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: process.env.FACEBOOK_ID,
		clientSecret: process.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] };


None
/*
{
  "origin": "test.tsx",
  "name": "auth_US9XKovuOyI",
  "entry": null,
  "displayName": "test.tsx_auth",
  "hash": "US9XKovuOyI",
  "canonicalFilename": "test.tsx_auth_US9XKovuOyI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "auth$",
  "captures": false,
  "loc": [
    642,
    943
  ]
}
*/
============================= test.tsx_serverAuth_vPbyaRdcMu4.js (ENTRY POINT)==

import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
export const serverAuth_vPbyaRdcMu4 = { providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: import.meta.env.FACEBOOK_ID,
		clientSecret: import.meta.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] };


None
/*
{
  "origin": "test.tsx",
  "name": "serverAuth_vPbyaRdcMu4",
  "entry": null,
  "displayName": "test.tsx_serverAuth",
  "hash": "vPbyaRdcMu4",
  "canonicalFilename": "test.tsx_serverAuth_vPbyaRdcMu4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "serverAuth$",
  "captures": false,
  "loc": [
    266,
    575
  ]
}
*/
== DIAGNOSTICS ==

[]
