optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_skip_transform.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ as Component, $ as onRender } from '@qwik.dev/core';

export const handler = $(()=>console.log('hola'));

export const App = component$((props) => {
	useStyles$('hola');
	return $(() => (
		<div>{state.thing}</div>
	));
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_T7IDIUVU4lI = ()=>import("./test.tsx_handler_T7IDIUVU4lI");
const i_t35nSa5UV7U = ()=>import("./test.tsx_App_component_useStyles_t35nSa5UV7U");
const i_w0t0o3QMovU = ()=>import("./test.tsx_App_component_1_w0t0o3QMovU");
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const handler = /*#__PURE__*/ qrl(i_T7IDIUVU4lI, "handler_T7IDIUVU4lI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
============================= test.tsx_handler_T7IDIUVU4lI.js (ENTRY POINT)==

export const handler_T7IDIUVU4lI = ()=>console.log("hola");


None
/*
{
  "origin": "test.tsx",
  "name": "handler_T7IDIUVU4lI",
  "entry": null,
  "displayName": "test.tsx_handler",
  "hash": "T7IDIUVU4lI",
  "canonicalFilename": "test.tsx_handler_T7IDIUVU4lI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    99,
    122
  ]
}
*/
============================= test.tsx_App_component_useStyles_t35nSa5UV7U.js (ENTRY POINT)==

export const App_component_useStyles_t35nSa5UV7U = "hola";


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_t35nSa5UV7U",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "t35nSa5UV7U",
  "canonicalFilename": "test.tsx_App_component_useStyles_t35nSa5UV7U",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    181,
    187
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { qrl, useStylesQrl } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = (props)=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_t35nSa5UV7U, "App_component_useStyles_t35nSa5UV7U"));
	return /*#__PURE__*/ qrl(i_w0t0o3QMovU, "App_component_1_w0t0o3QMovU");
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    156,
    241
  ]
}
*/
============================= test.tsx_App_component_1_w0t0o3QMovU.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const App_component_1_w0t0o3QMovU = ()=>/*#__PURE__*/ _jsxSorted("div", null, null, state.thing, 1, null);


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "test.tsx_App_component_1_w0t0o3QMovU",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    200,
    237
  ]
}
*/
== DIAGNOSTICS ==

[]
